# bridge-solver

./: .gitignore  CLAUDE.md  Cargo.toml
src/: bridge_solver.rs  lib.rs  par.rs
