[package]
name = "bridge-solver"
version = "0.4.0"
edition = "2021"
license = "Unlicense"
description = "Bridge Double-Dummy Solver - Port of macroxue/bridge-solver"
repository = "https://github.com/bridge-craftwork/bridge-solver"
keywords = ["bridge", "double-dummy", "solver", "cards"]
categories = ["games", "algorithms"]

[features]
default = []
cli = ["clap"]

# Debug features
debug_mtdf = []
debug_fast = []
debug_search = []
no_tricks_pruning = []
no_fast_tricks = []
no_slow_tricks = []

[[bin]]
name = "solver-diag"
path = "src/bin/solver-diag/main.rs"
required-features = ["cli"]

[[bin]]
name = "bridge-solver"
path = "src/bin/bridge-solver/main.rs"
required-features = ["cli"]

[dependencies]
bridge-types = { git = "https://github.com/bridge-craftwork/bridge-types" }
clap = { version = "4", features = ["derive"], optional = true }
